--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo3.png">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Charles Portfolio</title>
+    <title>Charles Dave Reyes</title>
   </head>
   <body>
     <div id="root"></div>
